--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 	body {
 		background: SeaShell;
 		color: black;
-		width: 100%;
+		overflow: hidden
 	}
 }
 
@@ -10,7 +10,7 @@
 	body {
 		background: #000;
 		color: white;
-		width: 100%;
+		overflow: hidden
 	}
 	a:link {
 		color: #00ff00;
