Adding li margin

--- a/style.css
+++ b/style.css
@@ -1,10 +1,17 @@
+body {
+	overflow-x: hidden;
+	margin: 0px;
+	padding: 8px;
+}
+
+li {
+	margin: 8px;
+}
+
 @media (prefers-color-scheme: light) {
 	body {
 		background: SeaShell;
 		color: black;
-		overflow-x: hidden;
-		margin: 0;
-		padding: 8px;
 	}
 }
 
@@ -12,9 +19,6 @@
 	body {
 		background: #000;
 		color: white;
-		overflow-x: hidden;
-		margin: 0;
-		padding: 8px;
 	}
 	a:link {
 		color: #00ff00;
