--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
+html {
+	width: 100%;
+	height: 100%;
+}
+
 body {
 	overflow-x: hidden;
 	margin: 0px;
-/* 	padding: 8px; */
+	width: 100%;
+	height: 100%;
 }
-
-/* 
-li {
-	margin: 8px;
-} */
 
 @media (prefers-color-scheme: light) {
 	body {
