--- a/EventsViewer/EventsViewer/Components/App.razor
+++ b/EventsViewer/EventsViewer/Components/App.razor
@@ -10,18 +10,19 @@
     <link rel="stylesheet" href="EventsViewer.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <HeadOutlet />
-    <script type="importmap">
+    @* see program.cs, holds enironment variables *@
+    <script src="/js/config.js"></script>
+    @* https://fullcalendar.io/docs/initialize-browser-esm *@
+    <script type='importmap'>
       {
         "imports": {
-          "preact": "https://unpkg.com/preact@10.22.1/dist/preact.module.js",
-          "preact/": "https://unpkg.com/preact@10.22.1/",
-          "@fullcalendar/core/": "https://cdn.jsdelivr.net/npm/@fullcalendar/core@6.1.20/",
-          "@fullcalendar/daygrid/": "https://cdn.jsdelivr.net/npm/@fullcalendar/daygrid@6.1.20/",
-          "@fullcalendar/timegrid/": "https://cdn.jsdelivr.net/npm/@fullcalendar/timegrid@6.1.20/"
+          "@@fullcalendar/core": "https://cdn.skypack.dev/@@fullcalendar/core@6.1.20",
+          "@@fullcalendar/daygrid": "https://cdn.skypack.dev/@@fullcalendar/daygrid@6.1.20",
+          "@@fullcalendar/interaction": "https://cdn.skypack.dev/@@fullcalendar/interaction@6.1.20",
+          "@@fullcalendar/timegrid": "https://cdn.skypack.dev/@@fullcalendar/timegrid@6.1.20"
         }
       }
     </script>
-    <script src="/js/config.js"></script>
     <script type="module" src="js/calendar.js"></script>
 </head>
 
