Add tool tip text when click on calendar

--- a/EventsViewer/EventsViewer/Components/App.razor
+++ b/EventsViewer/EventsViewer/Components/App.razor
@@ -18,7 +18,10 @@
         "imports": {
           "@@fullcalendar/core": "https://cdn.skypack.dev/@@fullcalendar/core@6.1.20",
           "@@fullcalendar/daygrid": "https://cdn.skypack.dev/@@fullcalendar/daygrid@6.1.20",
-          "@@fullcalendar/timegrid": "https://cdn.skypack.dev/@@fullcalendar/timegrid@6.1.20"
+          "@@fullcalendar/timegrid": "https://cdn.skypack.dev/@@fullcalendar/timegrid@6.1.20",
+          "@@ical.js": "https://cdn.skypack.dev/ical.js",
+          "tippy.js": "https://cdn.skypack.dev/tippy.js@6",
+          "@@popperjs/core": "https://cdn.skypack.dev/@@popperjs/core"
         }
       }
     </script>
