reference cdss in about

--- a/EventsViewer/EventsViewer.Client/Pages/Demo.razor
+++ b/EventsViewer/EventsViewer.Client/Pages/Demo.razor
@@ -9,17 +9,8 @@
 
 <PageTitle>demo</PageTitle>
 
-<h1>demo</h1>
+<h1>About</h1>
 
-<p role="status">Current count: @currentCount</p>
-
-<button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
-
-@code {
-    private int currentCount = 0;
-
-    private void IncrementCount()
-    {
-        currentCount++;
-    }
-}
+This project is partially funded by a generous grant from <a href='https://www.cdss.org'>CDSS</a>.
+<br />
+<img src='images/CDSS-horiz-color.png' alt='CDSS Logo' style='height:100px;' />
